k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: combuy
  labels:
    name: combuy
    module: Namespace
