k8s/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: combuy
  namespace: combuy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: combuy
  template:
    metadata:
      labels:
        app: combuy
    spec:
      containers:
        - name: combuy
          image: sing3demons/combuy:0.1.2
          # resources:
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 4
            failureThreshold: 4
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
