k8s/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: combuy-service
  namespace: combuy
spec:
  type: LoadBalancer
  selector:
    app: combuy
  ports:
  - port: 3000
    targetPort: 3000
    # nodePort: 30001
