k8s/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
      kubernetes.io/ingress.class: nginx
  namespace: combuy
  labels:
    name: myingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: combuy-service
            port: 
              number: 3000
